Redirect chrome://apps to not available, in guest mode.

chrome://apps page is not supported in guest mode, and currently if
navigated to, nothing happens which is felt as a bug to the user.
This is changed to redirecting to a page saying that apps is not
available to guest users.

Bug: 607508
Change-Id: I14880f885eb19279429736a5b3777516435c444d
Reviewed-on: https://chromium-review.googlesource.com/1087960
Reviewed-by: Bernhard Bauer <bauerb@chromium.org>
Commit-Queue: Ramin Halavati <rhalavati@chromium.org>
Cr-Commit-Position: refs/heads/master@{#564862}
Former-commit-id: f943a4bfe9300590222f58bf8e56cdb61d9c49e7